[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/images/Deilquilo.png" type="Texture" id=1]
[ext_resource path="res://scripts/deilquilo.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 20.3426, 24.0292 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 68.4258, 65.0414 )

[node name="deilquilo" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2( -2.82843, -12.7279 )
shape = SubResource( 2 )

[node name="cooldown" type="Timer" parent="." groups=["damage"]]
one_shot = true

[node name="FiringPosition" type="Node2D" parent="."]
position = Vector2( -2.82843, 0 )

[node name="gun" type="Node2D" parent="FiringPosition"]
position = Vector2( -197.99, 165.463 )

[node name="gun2" type="Node2D" parent="FiringPosition"]
position = Vector2( 196.576, 161.22 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.2
autostart = true

[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
